--- a/pom.xml
+++ b/pom.xml
@@ -141,6 +141,53 @@
             <artifactId>javax.servlet-api</artifactId>
             <version>4.0.1</version>
         </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-devtools</artifactId>
+                <optional>true</optional>
+            </dependency>
+            <!-- Jackson Databind -->
+
+            <!-- Jackson Annotations -->
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-core</artifactId>
+                <version>2.15.0</version>
+            </dependency>
+
+            <!-- Jackson Core -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.15.0</version>
+        </dependency>
+        <dependency>
+            <groupId>net.sourceforge.owlapi</groupId>
+            <artifactId>owlapi-distribution</artifactId>
+            <version>3.5.0</version>
+        </dependency>
+
+        <!-- jackson-annotations -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.15.0</version>
+
+        </dependency>
+
+            <!-- Jade -->
+            <dependency>
+                <groupId>jade</groupId>
+                <artifactId>jade</artifactId>
+                <version>1.0</version>
+            </dependency>
+
+            <!-- HermiT -->
+            <dependency>
+                <groupId>org.semanticweb.HermiT</groupId>
+                <artifactId>hermit</artifactId>
+                <version>1.0</version>
+            </dependency>
     </dependencies>
 
     <build>
