--- a/pom.xml
+++ b/pom.xml
@@ -171,6 +171,10 @@
             <artifactId>spring-boot-devtools</artifactId>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
 
 
         <!-- jackson-annotations -->
@@ -181,14 +185,16 @@
 
         </dependency>
 
-            <!-- Jade -->
-            <dependency>
-                <groupId>jade</groupId>
-                <artifactId>jade</artifactId>
-                <version>1.0</version>
-            </dependency>
+        <!-- https://mvnrepository.com/artifact/net.sf.ingenias/jade -->
+        <dependency>
+            <groupId>net.sf.ingenias</groupId>
+            <artifactId>jade</artifactId>
+            <version>4.3</version>
+        </dependency>
 
-            <!-- HermiT -->
+
+
+        <!-- HermiT -->
             <dependency>
                 <groupId>org.semanticweb.HermiT</groupId>
                 <artifactId>hermit</artifactId>
